---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type k : int var a := k"
---
"k"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"a"@"src/main.t:17..18" [ConstVar(Var, No)]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:22..23: cannot use `k` as an expression
| error for src/main.t:22..23: `k` is a reference to a type, not a variable
| note for src/main.t:5..6: `k` declared here
